force-app/main/default/objects/Contact/fields/Contact_Lists__c.field-meta.xml
<CustomField>
    <fullName>Contact_Lists__c</fullName>
    <label>Contact Lists</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounts Payable Contact</fullName>
            </value>
            <value>
                <fullName>APTA Invite</fullName>
            </value>
            <value>
                <fullName>Bus Delivery Contact</fullName>
            </value>
            <value>
                <fullName>Bus Shipment Notification</fullName>
            </value>
            <value>
                <fullName>Contract Correspondent</fullName>
            </value>
            <value>
                <fullName>Contract Reference</fullName>
            </value>
            <value>
                <fullName>Delivery List Reference</fullName>
            </value>
            <value>
                <fullName>eCard Contact</fullName>
            </value>
            <value>
                <fullName>Field Service Bulletin Contact</fullName>
            </value>
            <value>
                <fullName>General Manager</fullName>
            </value>
            <value>
                <fullName>Holiday Card</fullName>
            </value>
            <value>
                <fullName>Invoice / MSO Contact</fullName>
            </value>
            <value>
                <fullName>Maintenance Manager</fullName>
            </value>
            <value>
                <fullName>Manuals Contact</fullName>
            </value>
            <value>
                <fullName>Marketing Contact</fullName>
            </value>
            <value>
                <fullName>Parts Campaign</fullName>
            </value>
            <value>
                <fullName>Parts Contact</fullName>
            </value>
            <value>
                <fullName>Pre-Production Meeting Contact</fullName>
            </value>
            <value>
                <fullName>Primary Contact</fullName>
            </value>
            <value>
                <fullName>Primary Parts Contact</fullName>
            </value>
            <value>
                <fullName>Quote Contact</fullName>
            </value>
            <value>
                <fullName>Recall Contact</fullName>
            </value>
            <value>
                <fullName>Sees Candy</fullName>
            </value>
            <value>
                <fullName>Service Contact</fullName>
            </value>
            <value>
                <fullName>Spares Delivery Contact</fullName>
            </value>
            <value>
                <fullName>vScore Contact</fullName>
            </value>
            <value>
                <fullName>Warranty Administrator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>