force-app/main/default/objects/Contact/fields/Derek_Contact__c.field-meta.xml
<CustomField>
    <fullName>Derek_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Derek Contact</label>
    <type>Checkbox</type>
</CustomField>