force-app/main/default/objects/Contact/fields/Derek_Notes__c.field-meta.xml
<CustomField>
    <fullName>Derek_Notes__c</fullName>
    <label>Derek Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>