force-app/main/default/objects/Contact/recordTypes/Left_Customer.recordType-meta.xml
<RecordType>
    <fullName>Left_Customer</fullName>
    <active>true</active>
    <description>Contacts who are no longer at the customer</description>
    <label>Left Customer</label>
</RecordType>