force-app/main/default/objects/Contact/recordTypes/Supplier.recordType-meta.xml
<RecordType>
    <fullName>Supplier</fullName>
    <active>true</active>
    <description>Supplier Contact</description>
    <label>Supplier</label>
</RecordType>