force-app/main/default/objects/Contact/listViews/Marketing_Contacts.listView-meta.xml
<ListView>
    <fullName>Marketing_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contact_Lists__c</field>
        <operation>includes</operation>
        <value>Marketing Contact</value>
    </filters>
    <label>Marketing Contacts</label>
</ListView>