force-app/main/default/objects/Contact/listViews/Parts_Campaign.listView-meta.xml
<ListView>
    <fullName>Parts_Campaign</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contact_Lists__c</field>
        <operation>includes</operation>
        <value>Parts Campaign</value>
    </filters>
    <label>Parts Campaign</label>
    <sharedTo>
        <role>Director_Part_Sales</role>
        <role>Parts_Sales_Mgr</role>
    </sharedTo>
</ListView>